# study-buddy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  LOGGING.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  studybuddy.db  test_document.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 00cb7f33c013_sync_with_current_database.py  355a997aff22_add_user_authentication_tables_and_.py  a1b2c3d4e5f6_remove_file_url_column.py  d2c1caff1299_initial_migration.py
app/: logging_config.py  main.py
app/auth/: auth.py  database.py  manager.py
app/constants/: __init__.py  file_types.py  paths.py
app/database/: __init__.py  config.py  models.py
app/exceptions/: custom_exceptions.py  exception_handlers.py
app/middleware/: logging_middleware.py
app/routes/: auth.py  progress.py  study.py
app/schemas/: auth.py  progress.py  study.py  user.py
app/services/: auth_service.py  extraction_service.py  llm_service.py  storage_service.py
frontend/: .dockerignore  .env.example  .prettierignore  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthForm.tsx  CTASection.tsx  FAQSection.tsx  FeaturesSection.tsx  FileUpload.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  ProtectedRoute.tsx  SupportedFormatsSection.tsx  mode-toggle.tsx
frontend/docs/: API_CONFIGURATION.md  GLASSMORPHISM_IMPLEMENTATION.md
frontend/lib/: api.ts  auth-context.tsx
nginx/: nginx.conf
scripts/: entrypoint.sh
(+6 files in other folders)
