[project]
name = "study-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.119.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "openai>=1.0.0",
    "cerebras-cloud-sdk>=1.50.1",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2>=2.9.11",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "bcrypt>=5.0.0",
    "aiosqlite>=0.22.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long, handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
